--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@typescript-eslint/parser": "4.28.2",
     "electron": "^15.2.0",
     "eslint": "^7.26.0",
+    "eslint-config-prettier": "^8.3.0",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
