--- a/package.json
+++ b/package.json
@@ -33,6 +33,11 @@
     "@angular-eslint/template-parser": "12.5.0",
     "@angular/cli": "~12.2.10",
     "@angular/compiler-cli": "~12.2.0",
+    "@ngneat/tailwind": "^7.0.3",
+    "@tailwindcss/aspect-ratio": "latest",
+    "@tailwindcss/forms": "latest",
+    "@tailwindcss/line-clamp": "latest",
+    "@tailwindcss/typography": "latest",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "4.28.2",
@@ -47,6 +52,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "prettier": "2.4.1",
+    "tailwindcss": "latest",
     "typescript": "~4.3.5"
   }
 }
