style lint setup

--- a/package.json
+++ b/package.json
@@ -52,6 +52,9 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "prettier": "2.4.1",
+    "stylelint": "^13.13.1",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-standard": "^22.0.0",
     "tailwindcss": "latest",
     "typescript": "~4.3.5"
   }
