--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,9 @@
     "dbaeumer.vscode-eslint",
     "eamodio.gitlens",
     "esbenp.prettier-vscode",
-    "editorconfig.editorconfig"
+    "editorconfig.editorconfig",
+    "angular.ng-template",
+    "bradlc.vscode-tailwindcss",
+    "stylelint.vscode-stylelint"
   ]
 }
