--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng build --base-href ./ && electron .",
+    "start:dev": "ng build -c development --base-href ./ && electron .",
+    "start:mock": "ng build -c mock --base-href ./ && electron .",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
