--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@typescript-eslint/eslint-plugin": "4.28.2",
     "@typescript-eslint/parser": "4.28.2",
     "electron": "^15.2.0",
-    "electron-reload": "^2.0.0-alpha.1",
+    "electron-reload": "^1.5.0",
     "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
     "jasmine-core": "~3.8.0",
