Add mock scripts

--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "main": "electron/main.js",
   "scripts": {
     "ng": "ng",
-    "start": "npm-run-all --parallel electron:serve ng:serve",
+    "start": "npm run serve:dev",
+    "serve": "npm-run-all --parallel electron:serve \"ng serve -- -c {1}\" --",
+    "serve:dev": "npm run serve development",
+    "serve:prod": "npm run serve production",
+    "serve:mock": "npm run serve mock",
     "build": "ng build --base-href ./",
-    "build:dev": "npm run build -- --configuration development",
-    "build:prod": "npm run build -- --configuration production",
+    "build:dev": "npm run build -- -c development",
+    "build:prod": "npm run build -- -c production",
+    "build:mock": "npm run build -- -c mock",
     "electron:serve": "wait-on tcp:4200 && electron . --serve",
-    "electron:local": "npm run build:prod && electron .",
-    "ng:serve": "ng serve --configuration development",
+    "electron:local": "electron .",
     "test": "ng test --watch=false",
     "lint": "ng lint"
   },
